# piosphere

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-31f5d40c853bccb736af2c1baefc03cc88d6df62d1d5b65bd226885e8967effc.json  query-4fd2e4bdd57f6366457ce4bfa7f731340586f46370a5233a141a63b81ab58dcb.json  query-5a8c8cb89886bdd421dbbb2ecfdfcc6aed51ea78b62bdb1f13c575276e5748e5.json  query-63e24361af1ad1a33262d88a127b24377608becf311c09173ebf046635400acf.json  query-7f02f3e1420d1dd7db56f053475b2f30042dcb175a9be20a5d0af160d577e09f.json  query-8268fd8dc51915feb664c7c72178d73754f63da7a6c1aaabf346614bb33c8ca4.json  query-951ad482a5be6d4aefb8e511f75354a14b09ed413c7f92e7ca0f594fe78fc8e5.json  query-bbf6482a155c52f616b0f892d597b79864480dd251b1f4ad77ad07eba38c10fc.json  query-c89fd8c510bf097412322b3060603ad90c9458c4ea92dcd92b3ad601ec809d5d.json  query-cc6e03cb37cc6de89d4c2461082ea5ed049eec5f52b96cdb0aedab223f6258bf.json  query-e88e5f0b3f72f3ae639c15fa4cd705f20a00124b3c8e5f3e8c6860218f90eb6f.json  query-f8abd8e6b820a83d7b0457cd32cff71979a57f8e85bddf131af094fe8b6131d0.json
cli/: Cargo.toml
cli/src/: main.rs
dump/: hello.service  hello.vhost  hello2.service
macros/: Cargo.toml
piosphere/: Cargo.toml
piteria/: Cargo.toml
piteria/migrations/: 20231222080923_create_deployments.sql  20231222080923_create_tables.sql
piteria/src/: db.rs  deployment.rs  error.rs  lib.rs  main.rs  nginx.rs  socket.rs  systemd.rs
piteria/src/deployment/: nginx.rs  systemd.rs
piteria/src/socket/: client.rs  server.rs
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml
(+12 files in other folders)
