[package]
name = "piteria"
version = "0.1.0"
edition = "2021"
description = "Piteria core library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "debug"] }
nom = "7.1.3"
thiserror = "1.0.51"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "chrono",
    "macros",
    "any",
    "sqlite",
] }
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
] }
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
signal-hook = "0.3.17"
