[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piosphere = { path = "../piosphere" }
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
] }
signal-hook = "0.3.17"
clap = { version = "4.4.11", features = ["derive"] }
